--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "resource-center",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://DaBubbla.github.io/recipeFCC",
   "dependencies": {
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
@@ -9,9 +10,12 @@
     "react-scripts": "1.0.14"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+
   }
 }
